--- a/index.html
+++ b/index.html
@@ -487,6 +487,9 @@ Content-Type: application/json
       <section>
         <h3>And we want to conquer the world
       </section>
+      <section data-background-image="img/life-of-brian-stoning.jpg">
+        <h1>Questions?</h1>>
+      </section>
       <section>
         <h1>Thanks</h1>
       </section>
