talk about resources in API

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Content-Type: application/json
         <h4>Add minimal children information to each page</h4>
         <aside class="notes">
           More over if we add minimal children information to each page, we can get all the contents
-          and this way build a site navigation
+          and this way build a site navigation. The objects are the Resources of the API.
         </aside>
       </section>
       <section>
