run a survey about python versions

--- a/index.html
+++ b/index.html
@@ -395,7 +395,8 @@ Content-Type: application/json
       <section>
         <h1>Python 3</h1>
         <aside class="notes">
-          And in our way to the future, we need to talk seriously about Python 3
+          And in our way to the future, we need to talk seriously about Python 3.
+          Survey: who has used python 3.7, 3.6, 3.5.., 2.7? 2.6?, 2.4? 2.3? 2.1?
         </aside>
       </section>
 
