--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ Content-Type: application/json
         <h3>And we want to conquer the world
       </section>
       <section data-background-image="img/life-of-brian-stoning.jpg">
-        <h1>Questions?</h1>>
+        <h1>Questions?</h1>
       </section>
       <section>
         <h1>Thanks</h1>
